# glade-1.1.3

./: .gitattributes  .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  aclocal.m4  config.h  config.h.in  configure  configure.ac  configure.in  configure.scan  glade-2.desktop.in  glade.spec  glade.spec.in  intltool-extract
doc/: Makefile  Makefile.am  Makefile.in
doc/C/: Makefile  Makefile.am  Makefile.in
doc/C/glade-faq/: Makefile  Makefile.in  glade-faq-C.omf  glade-faq.xml
doc/C/glade-turbo-start/: Makefile  Makefile.am  Makefile.in  glade-turbo-start-C.omf  glade-turbo-start.xml
doc/C/glade-user-guide/: Makefile  Makefile.am  Makefile.in  glade-user-guide-C.omf  glade-user-guide.xml
examples/editor/: .gitattributes  ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h  config.h.in  configure  configure.ac  configure.scan
examples/editor/po/: ChangeLog  Makefile  Makefile.in
examples/editor/src/: Makefile  Makefile.in
glade/: Makefile  Makefile.am  Makefile.in  editor.c  gb.c  gb.h  gbsource.c  gbwidget.c  gbwidget.h  glade-parser.c  glade-parser.h  glade.c  glade.h  glade_atk.c  glade_clipboard.c  glade_gnome.c  glade_gnome.h  glade_gnomedblib.c  glade_gnomelib.c  glade_gtk12lib.c  glade_keys_dialog.c  glade_menu_editor.c  glade_palette.c  glade_palette.h  glade_project.c  glade_project.h  glade_project_options.c  glade_project_view.c  glade_project_window.c  load.c  main.c  palette.c  property.c  property.h  save.c  source.c  source.h  tree.c  utils.c  utils.h
glade/data/: Makefile  Makefile.in
glade/data/gtk/: Makefile  Makefile.am  Makefile.in
glade/gbwidgets/: Makefile  Makefile.am  Makefile.in  gbaccellabel.c  gbalignment.c  gbaspectframe.c  gbbutton.c  gbcheckbutton.c  gbcheckmenuitem.c  gbclist.c  gbcolorselectiondialog.c  gbcombo.c  gbdialog.c  gbentry.c  gbeventbox.c  gbfileselection.c  gbfontselection.c  gbfontselectiondialog.c  gbframe.c  gbhbox.c  gbhbuttonbox.c  gbimage.c  gbimagemenuitem.c  gbinputdialog.c  gblabel.c  gblistitem.c  gbmenu.c  gbmenubar.c  gbmenuitem.c  gbnotebook.c  gbprogressbar.c  gbradiobutton.c  gbradiomenuitem.c  gbscrolledwindow.c  gbspinbutton.c  gbtextview.c  gbtogglebutton.c  gbtoolbar.c  gbtreeview.c  gbvbox.c  (+2 more)
glade/gnome/: Makefile  Makefile.am  Makefile.in  bonobowindow.c  gnomeabout.c  gnomeapp.c  gnomecanvas.c  gnomecolorpicker.c  gnomecontrol.c  gnomedialog.c  gnomedruidpageedge.c  gnomedruidpagestandard.c  gnomefileentry.c  gnomefontpicker.c  gnomehref.c  gnomeiconentry.c  gnomeiconlist.c  gnomemessagebox.c  gnomepixmap.c  gnomepixmapentry.c  gnomepropertybox.c
glade/gnome-db/: Makefile  Makefile.am  Makefile.in  gnomedbbrowser.c  gnomedbconnectsel.c  gnomedberrordlg.c  gnomedblist.c  gnomedblogindlg.c  gnomedbsourcesel.c  gnomedbsqleditor.c
glade/graphics/: gnome-iconlist.xpm
omf-install/: Makefile  Makefile.in
po/: ChangeLog  Makefile  Makefile.in  POTFILES  POTFILES.in  az.gmo  az.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en_GB.gmo  en_GB.po  es.gmo  es.po  fr.gmo  fr.po  ga.gmo  ga.po  gl.gmo  gl.po  glade-2.0.pot  hu.gmo  hu.po  it.gmo  it.po  ja.gmo  ja.po  ko.gmo  ko.po  lv.gmo  lv.po  nn.gmo  nn.po  (+24 more)
