## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libgnomedbwidgets.a

INCLUDES = $(GLADE_CFLAGS) \
	$(GLADE_DEPRECATION_CFLAGS)

libgnomedbwidgets_a_SOURCES = \
	gnomedbbrowser.c \
	gnomedbcombo.c \
	gnomedbconnectsel.c \
	gnomedbdsnconfig.c \
	gnomedbdsndruid.c \
	gnomedberror.c \
	gnomedberrordlg.c \
	gnomedbform.c \
	gnomedbgrid.c \
	gnomedblist.c \
	gnomedblogin.c \
	gnomedblogindlg.c \
	gnomedbprovidersel.c \
	gnomedbsourcesel.c \
	gnomedbsqleditor.c \
	gnomedbtableeditor.c

